--- a/lotoReg3custom.html
+++ b/lotoReg3custom.html
@@ -7,6 +7,18 @@
     <title>3 Numbers</title>
     <style>
         body { background-color: rgb(209, 172, 221); }
+
+        .btn-1 {
+  background: rgb(6,14,131);
+  background: linear-gradient(0deg, rgba(6,14,131,1) 0%, rgba(12,25,180,1) 100%);
+  border: none;
+}
+.btn-1:hover {
+   background: rgb(0,3,255);
+background: linear-gradient(0deg, rgba(0,3,255,1) 0%, rgba(2,126,251,1) 100%);
+}
+
+
     </style>
 </head>
 <body>
@@ -17,7 +29,7 @@
     <input type="text" name="start" id="start" default="1"> 
     <label for="end">Last day</label> 
     <input type="text" name="end" id="end">  
-    <button id="submit">Send</button>
+    <button id="submit" class="btn-1">Send</button>
     <h3 id="outputs"></h3>
     <script src="lotoReg3custom.js" type="module" defer></script>
 </body>
