--- a/lotoReg3custom.html
+++ b/lotoReg3custom.html
@@ -49,8 +49,8 @@ background: linear-gradient(0deg, rgba(0,3,255,1) 0%, rgba(2,126,251,1) 100%);
     <input type="text" name="start" id="start" default="1"> 
     <label for="end">Last day</label> 
     <input type="text" name="end" id="end">  
-    <button id="submit" class="btn-1">Send</button>
-    <h3 id="outputs"></h3>
+    <button id="submit" class="custom-btn btn-1">Calculate</button>
+    <div id="outputs"></div>
     <script src="lotoReg3custom.js" type="module" defer></script>
 </body>
 </html>
