--- a/lotoReg3custom.html
+++ b/lotoReg3custom.html
@@ -50,7 +50,14 @@ background: linear-gradient(0deg, rgba(0,3,255,1) 0%, rgba(2,126,251,1) 100%);
     <label for="end">Last day</label> 
     <input type="text" name="end" id="end">  
     <button id="submit" class="custom-btn btn-1">Calculate</button>
-    <div id="outputs"></div>
+    <div id="outputs">
+        <table>
+            <thead id="tbhead">
+            </thead>
+            <tbody id="tbbody">
+            </tbody>
+        </table>
+    </div>
     <script src="lotoReg3custom.js" type="module" defer></script>
 </body>
 </html>
