--- a/lotoReg3custom.html
+++ b/lotoReg3custom.html
@@ -45,6 +45,7 @@ background: linear-gradient(0deg, rgba(0,3,255,1) 0%, rgba(2,126,251,1) 100%);
     <h1>3 Number Custom Range</h1>
     <!-- <a href="loto5.html">loto5</a> -->
     <!-- <iframe src="https://www.lotterypost.com/results/ny" width="400" height="400" title="W3Schools Free Online Web Tutorials"></iframe> -->
+    <p>Enter 1 for newest recorded day, 2 for day before that, etc...</p>
     <label for="start">First day</label> 
     <input type="text" name="start" id="start" default="1"> 
     <label for="end">Last day</label> 
