--- a/lotoReg3custom.html
+++ b/lotoReg3custom.html
@@ -37,7 +37,7 @@
 background: linear-gradient(0deg, rgba(0,3,255,1) 0%, rgba(2,126,251,1) 100%);
 }
 
-
+    span { font-size: 21px;}
 
     </style>
 </head>
