--- a/lotoReg3custom.html
+++ b/lotoReg3custom.html
@@ -8,12 +8,15 @@
     <style>
         body { background-color: rgb(209, 172, 221); }
 
+        p, h1, h2, label, span { font-family: Verdana, Geneva, Tahoma, sans-serif;}
+
         .custom-btn {
   width: 130px;
   height: 40px;
   color: #fff;
   border-radius: 5px;
   padding: 10px 25px;
+  margin-top: 12px;
   font-family: 'Lato', sans-serif;
   font-weight: 500;
   background: transparent;
@@ -37,7 +40,111 @@
 background: linear-gradient(0deg, rgba(0,3,255,1) 0%, rgba(2,126,251,1) 100%);
 }
 
-    span { font-size: 21px;}
+    span { font-size: 24px;
+    padding: 10px;
+    }
+
+
+
+
+
+
+    * { box-sizing:border-box; }
+
+/* basic stylings ------------------------------------------ */
+
+
+input 				{
+  font-size:18px;
+  padding:10px 10px 10px 5px;
+  display:block;
+  width:300px;
+  border:none;
+  border-bottom:1px solid #757575;
+}
+input:focus 		{ outline:none; }
+
+/* LABEL ======================================= */
+label 				 {
+  font-size:18px;
+  font-weight:normal;
+  pointer-events:none;
+  transition:0.2s ease all; 
+  -moz-transition:0.2s ease all; 
+  -webkit-transition:0.2s ease all;
+}
+
+/* active state */
+input:focus ~ label, input:valid ~ label 		{
+  top:-20px;
+  font-size:14px;
+  color:#5264AE;
+}
+
+/* BOTTOM BARS ================================= */
+.bar 	{ position:relative; display:block; width:300px; }
+.bar:before, .bar:after 	{
+  content:'';
+  height:2px; 
+  width:0;
+  bottom:1px; 
+  position:absolute;
+  background:#5264AE; 
+  transition:0.2s ease all; 
+  -moz-transition:0.2s ease all; 
+  -webkit-transition:0.2s ease all;
+}
+.bar:before {
+  left:50%;
+}
+.bar:after {
+  right:50%; 
+}
+
+/* active state */
+input:focus ~ .bar:before, input:focus ~ .bar:after {
+  width:50%;
+}
+
+/* HIGHLIGHTER ================================== */
+.highlight {
+  position:absolute;
+  height:60%; 
+  width:100px; 
+  top:25%; 
+  left:0;
+  pointer-events:none;
+  opacity:0.5;
+}
+
+/* active state */
+input:focus ~ .highlight {
+  -webkit-animation:inputHighlighter 0.3s ease;
+  -moz-animation:inputHighlighter 0.3s ease;
+  animation:inputHighlighter 0.3s ease;
+}
+
+/* ANIMATIONS ================ */
+@-webkit-keyframes inputHighlighter {
+	from { background:#5264AE; }
+  to 	{ width:0; background:transparent; }
+}
+@-moz-keyframes inputHighlighter {
+	from { background:#5264AE; }
+  to 	{ width:0; background:transparent; }
+}
+@keyframes inputHighlighter {
+	from { background:#5264AE; }
+  to 	{ width:0; background:transparent; }
+}
+
+
+
+
+
+
+
+
 
     </style>
 </head>
@@ -46,9 +153,9 @@ background: linear-gradient(0deg, rgba(0,3,255,1) 0%, rgba(2,126,251,1) 100%);
     <!-- <a href="loto5.html">loto5</a> -->
     <!-- <iframe src="https://www.lotterypost.com/results/ny" width="400" height="400" title="W3Schools Free Online Web Tutorials"></iframe> -->
     <p>Enter 1 for newest recorded day, 2 for day before that, etc...</p>
-    <label for="start">First day</label> 
+    <label for="start">Newest day</label> 
     <input type="text" name="start" id="start" default="1"> 
-    <label for="end">Last day</label> 
+    <label for="end">Oldest day</label> 
     <input type="text" name="end" id="end">  
     <button id="submit" class="custom-btn btn-1">Calculate</button>
     <div id="outputs"></div>
