--- a/lotoReg3custom.html
+++ b/lotoReg3custom.html
@@ -41,7 +41,8 @@ background: linear-gradient(0deg, rgba(0,3,255,1) 0%, rgba(2,126,251,1) 100%);
 }
 
     span { font-size: 24px;
-    padding: 10px;
+    padding-inline: 12px;
+    padding-block: 8px;
     }
 
 
