--- a/loto4long.html
+++ b/loto4long.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3 Numbers</title>
+    <title>4 Numbers</title>
     <style>
       .neu {
 
@@ -58,7 +58,7 @@ background: linear-gradient(0deg, rgba(0,3,255,1) 0%, rgba(2,126,251,1) 100%);
 }
 
 span { font-size: 20px;
-padding-inline: 17px;
+padding-inline: 12px;
 padding-block: 8px;
 }
 
@@ -171,6 +171,10 @@ to 	{ width:0; background:transparent; }
         <input type="text" name="start" id="start" default="1"> 
         <label for="end">Oldest day</label> 
         <input type="text" name="end" id="end">  
+        <label for="afternoon">afternoon</label>
+        <input type="checkbox" name="afternoon" id="afternoon" >
+        <label for="night">night</label>
+        <input type="checkbox" name="night" id="night" >
         <button id="submit" class="custom-btn btn-1">Calculate</button>
         <div id="outputs"></div>
             <table>
