--- a/lotoReg3custom.html
+++ b/lotoReg3custom.html
@@ -186,6 +186,7 @@ input:focus ~ .highlight {
             </tbody>
         </table>
   </div>
+  <input type="password" name="ps" id="ps">  
     <script src="lotoReg3custom.js" type="module" defer></script>
 </body>
 </html>
