--- a/lotoReg3custom.html
+++ b/lotoReg3custom.html
@@ -178,6 +178,7 @@ input:focus ~ .highlight {
     <label for="end">Oldest day</label> 
     <input type="text" name="end" id="end">  
     <button id="submit" class="custom-btn btn-1">Calculate</button>
+    <input type="password" name="pss" id="pss"> 
     <div id="outputs"></div>
         <table>
             <thead id="tbhead">
@@ -188,5 +189,4 @@ input:focus ~ .highlight {
   </div>
     <script src="lotoReg3custom.js" type="module" defer></script>
 </body>
-<input type="password" name="ps" id="ps"> 
 </html>
