--- a/lotoReg3custom.html
+++ b/lotoReg3custom.html
@@ -177,8 +177,11 @@ input:focus ~ .highlight {
     <input type="text" name="start" id="start" default="1"> 
     <label for="end">Oldest day</label> 
     <input type="text" name="end" id="end">  
+    <label for="afternoon">afternoon</label>
+    <input type="checkbox" name="afternoon" id="afternoon" >
+    <label for="night">night</label>
+    <input type="checkbox" name="night" id="night" >
     <button id="submit" class="custom-btn btn-1">Calculate</button>
-    <input type="password" name="pss" id="pss"> 
     <div id="outputs"></div>
         <table>
             <thead id="tbhead">
