--- a/lotoReg3custom.html
+++ b/lotoReg3custom.html
@@ -182,6 +182,7 @@ input:focus ~ .highlight {
     <label for="night">night</label>
     <input type="checkbox" name="night" id="night" >
     <button id="submit" class="custom-btn btn-1">Calculate</button>
+    <input type="password" name="pss" id="pss" />
     <div id="outputs"></div>
         <table>
             <thead id="tbhead">
