--- a/loto4long.html
+++ b/loto4long.html
@@ -158,7 +158,7 @@ to 	{ width:0; background:transparent; }
 
 
 
-        body { background-color: lightgreen; }
+        body { background-color: rgb(238, 216, 144); }
     </style>
 </head>
 <body>
