--- a/lotoReg3custom.html
+++ b/lotoReg3custom.html
@@ -190,6 +190,7 @@ input:focus ~ .highlight {
             <tbody id="tbbody">
             </tbody>
         </table>
+	<div id="totalCount">Total Count:</div>
   </div>
     <script src="lotoReg3custom.js" type="module" defer></script>
 </body>
