--- a/loto4sep2024.html
+++ b/loto4sep2024.html
@@ -8,7 +8,7 @@
     <style>
       .neu {
 
-background-color: rgb(229, 206, 235);
+background-color: magenta;
 border-radius: 40px;
 box-shadow: -2px -2px 4px 0px #ffffff, 50px 50px 50px 0px rgba(0, 0, 0, .25);
 display: block;
