--- a/lotoReg3custom.html
+++ b/lotoReg3custom.html
@@ -18,7 +18,7 @@
         max-width: 350px;
         margin-bottom: 25px;
         overflow: hidden;
-        padding: 30px;
+        padding: 5px;
       }
 
         body { 
@@ -191,6 +191,13 @@ input:focus ~ .highlight {
             </tbody>
         </table>
 	<div id="totalCount">Total Count:</div>
+    <div id="outputsNormed"></div>
+        <table>
+            <thead id="tbheadNormed">
+            </thead>
+            <tbody id="tbbodyNormed">
+            </tbody>
+        </table>
   </div>
     <script src="lotoReg3custom.js" type="module" defer></script>
 </body>
